- using rootDomainObject specific read instead of ObjectFenixOJB.readByOID method - using domain specific delete methods instead of ObjectFenixOJB.deleteByOID