@@ -7,38 +7,25 @@ import net.sourceforge.fenixedu.dataTransferObject.InfoItem;
 import net.sourceforge.fenixedu.domain.Item;
 import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 
-/**
- * @author Fernanda Quitério
- * 
- */
 public class EditItem extends Service {
 
-	/**
-	 * Executes the service.
-	 * @throws ExcepcaoPersistencia 
-	 * 
-	 */
 	public Boolean run(Integer infoExecutionCourseCode, Integer itemCode, InfoItem newInfoItem)
 			throws FenixServiceException, ExcepcaoPersistencia {
-		Item item = null;
-
-		item = (Item) persistentObject.readByOID(Item.class, itemCode);
-
+		Item item = rootDomainObject.readItemByOID(itemCode);
 		if (item == null) {
 			throw new ExistingServiceException();
 		}
 
 		if (newInfoItem.getItemOrder() == -2)
-			newInfoItem.setItemOrder(new Integer(item.getSection().getAssociatedItemsCount() - 1));
+			newInfoItem.setItemOrder(Integer.valueOf(item.getSection().getAssociatedItemsCount() - 1));
 
-		int diffOrder = newInfoItem.getItemOrder() - item.getItemOrder().intValue();
+		int diffOrder = newInfoItem.getItemOrder() - item.getItemOrder();
 		if (diffOrder < 0)
 			newInfoItem.setItemOrder(newInfoItem.getItemOrder() + 1);
 
-		item.edit(newInfoItem.getName(), newInfoItem.getInformation(), newInfoItem.getUrgent(),
-				newInfoItem.getItemOrder());
+		item.edit(newInfoItem.getName(), newInfoItem.getInformation(), newInfoItem.getUrgent(), newInfoItem.getItemOrder());
 
-		return new Boolean(true);
+		return Boolean.TRUE;
 	}
 
 }
